--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+icewm (1.3.8-1) UNRELEASED; urgency=low
+
+  * New upstream version
+
+ -- Eduard Bloch <blade@debian.org>  Sun, 21 Sep 2014 23:48:06 +0200
+
 icewm (1.3.7-5) unstable; urgency=low
 
   * Fixing linking arguments (libm also for Gnome parts, closes: #713632)
