--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-icewm (1.3.8-2) unstable; urgency=low
+icewm (1.3.8-2) unstable; urgency=medium
 
   * Fix format buffer overflow in CPU tooltip rendering (closes: 765965)
 
- -- Eduard Bloch <blade@debian.org>  Sun, 19 Oct 2014 23:57:51 +0200
+ -- Eduard Bloch <blade@debian.org>  Mon, 20 Oct 2014 00:22:52 +0200
 
 icewm (1.3.8-1) unstable; urgency=low
 
