--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+icewm (1.3.8+githubmod+20150126.1+79e1109) UNRELEASED; urgency=low
+
+  * Alternative upstream version: moving to community patched version on
+    GitHub, with a Debian specific branch on top of icewm-1-3-BRANCH from
+    Brian Bidulock <bidulock@openss7.org>
+  * Adaptation of some Debian defaults to use systemd services for
+    Shutdown/Reboot/Suspend (otherwise requiring sudo)
+
+ -- Eduard Bloch <blade@debian.org>  Mon, 26 Jan 2015 20:32:54 +0100
+
 icewm (1.3.8-2) unstable; urgency=medium
 
   * Fix format buffer overflow in CPU tooltip rendering (closes: 765965)
