--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ icewm (1.3.8+githubmod+20150126.1+79e1109) UNRELEASED; urgency=low
     Brian Bidulock <bidulock@openss7.org>
   * Adaptation of some Debian defaults to use systemd services for
     Shutdown/Reboot/Suspend (otherwise requiring sudo)
+  * Removed -name and -title options from x-terminal-emulator calls, those
+    options are not universal
 
  -- Eduard Bloch <blade@debian.org>  Mon, 26 Jan 2015 20:32:54 +0100
 
