--- a/debian/NEWS
+++ b/debian/NEWS
@@ -1,3 +1,15 @@
+icewm (1.3.8+githubmod+20150126.1+79e1109) unstable; urgency=low
+
+  * This release is based on alternative source, based on a community fork
+    maintained on Github.
+  * Some left-overs from the long history if IceWM in Debian are removed since
+    probably nobody has used them in this decade. This includes Gnome (1) GDM
+    integration, additional (actually duplicated) session options in the
+    display manager selection, startup script emulated deprecated icewm-gnome
+    package
+
+ -- Eduard Bloch <blade@debian.org>  Thu, 29 Jan 2015 18:31:33 +0100
+
 icewm (1.2.30-1) unstable; urgency=medium
 
   Noteworthy changes / new features:
