--- a/debian/changelog
+++ b/debian/changelog
@@ -8,7 +8,7 @@ icewm (1.3.8+githubmod+20150126.1+79e1109) UNRELEASED; urgency=low
   * Removed -name and -title options from x-terminal-emulator calls, those
     options are not universal
   * TODO: review README.Debian, do something about interface
-    tray icon heisenbug, add closes: tags for some bugs
+    tray icon heisenbug, add closes: tags for some bugs, install both changelogs
 
  -- Eduard Bloch <blade@debian.org>  Mon, 26 Jan 2015 20:32:54 +0100
 
