--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ icewm (1.3.8+githubmod+20150126.1+79e1109) UNRELEASED; urgency=low
     Shutdown/Reboot/Suspend (otherwise requiring sudo)
   * Removed -name and -title options from x-terminal-emulator calls, those
     options are not universal
+  * Not installing genpref anymore (no point, use config examples)
   * TODO: review README.Debian, do something about interface
     tray icon heisenbug, add closes: tags for some bugs, install both changelogs
 
