--- a/debian/changelog
+++ b/debian/changelog
@@ -9,7 +9,10 @@ icewm (1.3.8+githubmod+20150126.1+79e1109) UNRELEASED; urgency=low
     options are not universal
   * Not installing genpref anymore (no point, use config examples)
   * TODO: review README.Debian, do something about interface
-    tray icon heisenbug, add closes: tags for some bugs, install both changelogs
+    tray icon heisenbug, add closes: tags for some bugs, install both
+    changelogs, make the upgrade smooth because of files moved across the
+    packages
+
 
  -- Eduard Bloch <blade@debian.org>  Mon, 26 Jan 2015 20:32:54 +0100
 
