--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,19 @@
-icewm (1.3.8+githubmod+20150126.1+79e1109) UNRELEASED; urgency=low
+icewm (1.3.8+githubmod+20150212.1+b7d3864) UNRELEASED; urgency=low
 
   * Alternative upstream version: moving to community patched version on
     GitHub, with a Debian specific branch on top of icewm-1-3-BRANCH from
     Brian Bidulock <bidulock@openss7.org>
+    + fixes shutdown and reboot commands (closes: #771845)
+    + includes the autocompletion patch (closes: #774231)
   * Dropped icewm-gnome-support package (now integrating a new desktop menu
     plugin supporting any modern format; dropping dependencies on ancient
     gnome libraries. Closes: #708042)
+  * setting package dependency on fonts-dejavu-core, keeping ttf-dejavu-core
+    as alternative for backport (closes: #770309)
+  * Dropped most xsession*desktop files (closes: #605926), keeping only
+    icewm-session*desktop invocation configs
+  * Added a workaround for zombie windows apparently caused by startup races
+    in icewm-session (closes: #695040, #695035, #760399)
   * Adaptation of some Debian defaults to use systemd services for
     Shutdown/Reboot/Suspend (otherwise requiring sudo)
   * Removed -name and -title options from x-terminal-emulator calls, those
