--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+icewm (1.3.8+githubmod+20150213.2+d373d99) experimental; urgency=low
+
+  * Restored dh_fixperms
+
+ -- 
+
 icewm (1.3.8+githubmod+20150213.2+d373d98) experimental; urgency=low
 
   * Adjusting build dependencies
