--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
-icewm (1.3.8+githubmod+20150213.2+d373d99) experimental; urgency=low
+icewm (1.3.8+githubmod+20150213.3+d373d98) experimental; urgency=low
 
   * Restored dh_fixperms
+  * Removed erraneous icewm-menu-fdo-... manpage links with suffix
 
  -- 
 
