--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,13 @@
-icewm (1.3.8+githubmod+20150213.3+d373d98) experimental; urgency=low
+icewm (1.3.8+githubmod+20150214+d373d98-1) experimental; urgency=low
 
-  * Restored dh_fixperms
-  * Removed erraneous icewm-menu-fdo-... manpage links with suffix
+  * Back to non-native packaging, generating upstream snapshots as needed.
+    Generating FAQ documents in the build process, new build dependency on
+    linuxdoc-tools
+  * Removed erraneous icewm-menu-fdo-... manpage links with suffix, moved it
+    to icewm-common (closes: #778424)
+  * Restored dh_fixperms call
 
- -- 
+ -- Eduard Bloch <blade@debian.org>  Sun, 15 Feb 2015 18:20:23 +0100
 
 icewm (1.3.8+githubmod+20150213.2+d373d98) experimental; urgency=low
 
