--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+icewm (1.3.8+githubmod+20150214+d373d98-2) experimental; urgency=low
+
+  * Fix naming of icewm.1 (make it icewm.1x like before, closes: #778797)
+  * Added another conflicts to icewm, against previous versions of
+    icewm-common that erroneously contained some meta files (closes: #778555)
+
+ -- Eduard Bloch <blade@debian.org>  Fri, 20 Feb 2015 08:14:25 +0100
+
 icewm (1.3.8+githubmod+20150214+d373d98-1) experimental; urgency=low
 
   * Back to non-native packaging, generating upstream snapshots as needed.
