--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+icewm (1.3.8+githubmod+20150302+5e2b78e-1) experimental; urgency=low
+
+  * New upstream snapshot
+    + fixes chopped strings with non-ascii locales in icewm-lite
+
+ -- Your Name <your@email.address>  Mon, 02 Mar 2015 13:36:40 +0100
+
 icewm (1.3.8+githubmod+20150214+d373d98-2) experimental; urgency=low
 
   * Unified naming of manpage suffix, removed conflicting symlink in icewm
