--- a/debian/changelog
+++ b/debian/changelog
@@ -2,13 +2,13 @@ icewm (1.3.8+githubmod+20150304+e223c3e-1) UNRELEASED; urgency=low
 
   * New upstream snapshot
     + fixes chopped strings with non-ascii locales in icewm-lite
-  * Automatic deleting of known unmodified files from /etc/X11/icewm (the
-    copies in /usr/share/icewm are used instead, this should stop the general
+  * Automatic deletion of old unmodified files from /etc/X11/icewm (the
+    copies in /usr/share/icewm are used instead; this should stop the overall
     confusion, closes: #409269) and added instructions for
     configuration to README.Debian (closes: #593295)
   * Buggy icewm-menus-gnome is gone (closes: #716629, actually two versions ago)
 
- -- Eduard Bloch <blade@debian.org>  Wed, 04 Mar 2015 15:30:51 +0100
+ -- Eduard Bloch <blade@debian.org>  Mon, 09 Mar 2015 20:09:21 +0100
 
 icewm (1.3.8+githubmod+20150214+d373d98-2) experimental; urgency=low
 
