--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
-icewm (1.3.8+githubmod+20150304+e223c3e-1) UNRELEASED; urgency=low
+icewm (1.3.8+githubmod+20150310+31bfd46-1) unstable; urgency=low
 
-  * New upstream snapshot
+  * New upstream snapshot, upload to unstable
     + fixes chopped strings with non-ascii locales in icewm-lite
   * Automatic deletion of old unmodified files from /etc/X11/icewm (the
     copies in /usr/share/icewm are used instead; this should stop the overall
@@ -8,7 +8,7 @@ icewm (1.3.8+githubmod+20150304+e223c3e-1) UNRELEASED; urgency=low
     configuration to README.Debian (closes: #593295)
   * Buggy icewm-menus-gnome is gone (closes: #716629, actually two versions ago)
 
- -- Eduard Bloch <blade@debian.org>  Mon, 09 Mar 2015 20:09:21 +0100
+ -- Eduard Bloch <blade@debian.org>  Tue, 10 Mar 2015 11:52:55 +0100
 
 icewm (1.3.8+githubmod+20150214+d373d98-2) experimental; urgency=low
 
