--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+icewm (1.3.8+githubmod+20150310+31bfd46-2) unstable; urgency=low
+
+  * Adjusting build dependencies (cmake, removed various older ones)
+
+ -- Eduard Bloch <blade@debian.org>  Tue, 10 Mar 2015 13:02:15 +0100
+
 icewm (1.3.8+githubmod+20150310+31bfd46-1) unstable; urgency=low
 
   * New upstream snapshot, upload to unstable
