--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 icewm (1.3.8+githubmod+20150310+31bfd46-3) UNRELEASED; urgency=low
 
-  * Added the last version of FAQ, added text version (closes: #397231)
+  * Added the last version of FAQ, added text version (closes: #397231) and
+    groff Build-Dependency to generate it
   * Added an example of a startup file for icewm-session, it also executes
     the XDG autorun files (closes: #401664)
 
