--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
-icewm (1.3.8+githubmod+20150815+4cda2e8-1) unstable; urgency=low
+icewm (1.3.8+githubmod++20150818+4cda2e8-1) unstable; urgency=medium
 
   * New upstream snapshot (github version 1.3.10+)
+    + Reverted the unconditional setting of Java focus hack that seems to
+      cause more harm than good (closes: #782088)
 
- -- Eduard Bloch <blade@debian.org>  Sun, 16 Aug 2015 19:57:50 +0200
+ -- Eduard Bloch <blade@debian.org>  Tue, 18 Aug 2015 10:32:09 +0200
 
 icewm (1.3.8+githubmod+20150412+960629d-1) unstable; urgency=low
 
