--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,56 @@
--e # created with git log -n 200 --abbrev-commit --decorate --stat=76 -M -C|fmt -sct -w80
+# created with git log -n 200 --abbrev-commit --decorate --stat=76 -M -C|fmt -sct -w80
 
-commit 4cda2e8 (bbidulock/icewm-1-3-BRANCH, icewm-1-3-BRANCH)
+commit fa3fdef (tag: upstream/1.3.8+githubmod+20150914+fa3fdef,
+bbidulock/icewm-1-3-BRANCH, icewm-1-3-BRANCH)
+Author: Eduard Bloch <blade@debian.org>
+Date:   Mon Sep 14 23:42:44 2015 +0200
+
+    Using CMAKE_INSTALL_PREFIX variable instead of PREFIX
+
+    PREFIX seems to cause weird things with cmake 3.2 and gcc 5
+    https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=799009
+
+ CMakeLists.txt     | 10 +++++-----
+ INSTALL.cmakebuild |  2 ++
+ src/CMakeLists.txt |  2 +-
+ 3 files changed, 8 insertions(+), 6 deletions(-)
+
+commit 04d6e2f
+Author: Brian Bidulock <bidulock@openss7.org>
+Date:   Sun Sep 13 15:42:24 2015 -0600
+
+    updates to handle gettext 0.19.5.1
+
+     - there can not be more than 2 `.' in AM_GNU_GETTEXT_VERSION or
+       autopoint complains and fails
+
+     - this fixes for gettext 0.19.5.1 (where only 0.19.5) must go in
+       AM_GNU_GETTEXT_VERSION
+
+ autogen.sh | 2 +-
+ 1 file changed, 1 insertion(+), 1 deletion(-)
+
+commit ad6d8c9
+Author: Eduard Bloch <blade@debian.org>
+Date:   Fri Aug 21 15:29:02 2015 +0200
+
+    Fixed support of wordexp in the env hack with cmake build
+
+ src/config.cmake.h.in | 1 +
+ 1 file changed, 1 insertion(+)
+
+commit ad97152 (tag: upstream/1.3.8+githubmod+20150818+ad97152,
+origin/icewm-1-3-BRANCH, origin/HEAD, foo)
+Author: Eduard Bloch <blade@debian.org>
+Date:   Wed Jul 8 13:13:17 2015 +0200
+
+    Default key binding for calculator call
+
+ lib/keys.in | 1 +
+ 1 file changed, 1 insertion(+)
+
+commit 4cda2e8 (tag: upstream/1.3.8+githubmod+20150815+4cda2e8, tag:
+upstream/1.3.8+githubmod++20150818+4cda2e8)
 Author: Eduard Bloch <blade@debian.org>
 Date:   Sun Aug 16 16:33:16 2015 +0200
 
@@ -344,7 +394,7 @@ Date:   Thu Jul 2 20:19:49 2015 +0200
  src/apppstatus.cc | 2 +-
  1 file changed, 1 insertion(+), 1 deletion(-)
 
-commit 55751a9 (origin/ftr_icewm_env_hack, ftr_icewm_env_hack)
+commit 55751a9 (origin/ftr_icewm_env_hack)
 Author: Eduard Bloch <blade@debian.org>
 Date:   Thu Jul 2 16:25:20 2015 +0200
 
@@ -357,8 +407,7 @@ Date:   Thu Jul 2 16:25:20 2015 +0200
  src/mstring.h      | 18 ++++++++++++++++++
  5 files changed, 77 insertions(+), 2 deletions(-)
 
-commit 960629d (tag: upstream/1.3.8+githubmod+20150412+960629d,
-origin/icewm-1-3-BRANCH, origin/HEAD)
+commit 960629d (tag: upstream/1.3.8+githubmod+20150412+960629d)
 Author: Eduard Bloch <blade@debian.org>
 Date:   Sat Apr 11 18:43:56 2015 +0200
 
@@ -551,7 +600,7 @@ Date:   Sun Mar 1 13:56:17 2015 -0700
 
     Add memory status monitor applet.
 
-commit 24564a9
+commit 24564a9 (ftr_cmake_rebased)
 Author: Eduard Bloch <blade@debian.org>
 Date:   Sun Mar 1 21:13:43 2015 +0100
 
@@ -885,7 +934,8 @@ Date:   Sun Feb 8 17:24:23 2015 +0100
  src/wmapp.cc | 7 ++++++-
  1 file changed, 6 insertions(+), 1 deletion(-)
 
-commit 134c083 (origin/ftr_make_icewm-menu-fdo_default)
+commit 134c083 (origin/ftr_make_icewm-menu-fdo_default,
+ftr_make_icewm-menu-fdo_default)
 Author: Eduard Bloch <blade@debian.org>
 Date:   Sun Feb 8 10:45:56 2015 +0100
 
@@ -895,7 +945,7 @@ Date:   Sun Feb 8 10:45:56 2015 +0100
  1 file changed, 1 insertion(+), 2 deletions(-)
 
 commit c31a61a (origin/ftr_gnomeless_fdo_menu_generator,
-home/ftr_gnomeless_fdo_menu_generator)
+ftr_gnomeless_fdo_menu_generator)
 Author: Eduard Bloch <blade@debian.org>
 Date:   Sat Feb 7 16:17:06 2015 +0100
 
@@ -1049,7 +1099,7 @@ Date:   Sat Feb 7 00:00:52 2015 +0100
  src/fdomenu.cc  | 138 ++++++++++++++++++++++++++++++++++++++++++++++++++++
  3 files changed, 160 insertions(+), 1 deletion(-)
 
-commit f202cb6 (home/icewm-1-3-BRANCH)
+commit f202cb6
 Author: Eduard Bloch <blade@debian.org>
 Date:   Thu Feb 5 21:24:06 2015 +0100
 
@@ -1213,7 +1263,7 @@ Date:   Mon Feb 2 23:08:42 2015 +0100
  lib/keys.in | 2 +-
  1 file changed, 1 insertion(+), 1 deletion(-)
 
-commit 3b6fc2a (home/ftr_synchronize_icewmtray_and_startup)
+commit 3b6fc2a (ftr_synchronize_icewmtray_and_startup)
 Author: Eduard Bloch <blade@debian.org>
 Date:   Mon Feb 2 20:42:56 2015 +0100
 
@@ -1323,8 +1373,7 @@ Date:   Sun Feb 1 13:38:35 2015 -0700
 
     Unified setting of EXEEXT through Makefile variable only
 
-commit 8b25501 (origin/ftr_centralized_usage_of_exeext,
-ftr_centralized_usage_of_exeext)
+commit 8b25501 (origin/ftr_centralized_usage_of_exeext)
 Author: Eduard Bloch <blade@debian.org>
 Date:   Sun Feb 1 14:38:13 2015 +0100
 
@@ -1340,7 +1389,7 @@ Date:   Sun Feb 1 14:38:13 2015 +0100
  src/wmprog.cc   |  1 +
  8 files changed, 34 insertions(+), 13 deletions(-)
 
-commit c16c009 (ftr_centralized_usage_of_exeext_fscked)
+commit c16c009
 Author: Eduard Bloch <blade@debian.org>
 Date:   Sun Feb 1 13:20:14 2015 +0100
 
@@ -2744,59 +2793,3 @@ Date:	Wed Dec 18 14:53:28 2013 -0400
 
  src/decorate.cc | 3 +--
  1 file changed, 1 insertion(+), 2 deletions(-)
-
-commit 2845d32
-Author: DeltaResero <deltaresero@zoho.com>
-Date:	Wed Dec 18 14:47:19 2013 -0400
-
-    Fix define type for WinWorkspaceInvalid
-
- src/WinMgr.h | 2 +-
- 1 file changed, 1 insertion(+), 1 deletion(-)
-
-commit ac860b8
-Author: DeltaResero <deltaresero@zoho.com>
-Date:	Wed Dec 18 14:46:12 2013 -0400
-
-    Minor README.md tweaking
-
-    I seem to have missing the fact that installation will require root access
-    (or sudo)
-    Everything else here is just minor capitalization fixes
-
- README.md | 10 +++++-----
- 1 file changed, 5 insertions(+), 5 deletions(-)
-
-commit 3a37a6c
-Author: DeltaResero <deltaresero@zoho.com>
-Date:	Wed Dec 18 14:41:45 2013 -0400
-
-    Fix memory leak in icehelp.cc
-
-    Originally mentioned here:
-    https://bugzilla.novell.com/show_bug.cgi?id=546806
-    Memory leaks should be fixed even if it's right before the program exits.
-    It's not professional and it's bad practice to rely on the operating system
-    as not all will free it.  Maybe I'm missing something, but I think it's
-    'better to be safe than sorry' is the way I see it.
-    Also see here:
-    http://stackoverflow.com/questions/273209/are-memory-leaks-ever-ok
-
- src/icehelp.cc | 1 +
- 1 file changed, 1 insertion(+)
-
-commit fbaa764
-Author: DeltaResero <deltaresero@zoho.com>
-Date:	Wed Dec 18 14:34:38 2013 -0400
-
-    Add ignoreUrgentHint to winoptions
-
-    Author: CJ
-    Patch is from: http://sourceforge.net/p/icewm/patches/218/
-    As mentioned on Sourceforge, this works, but there is a slightly better
-    way of doing this
-
- src/wmframe.cc  | 17 ++++++++++++++---
- src/wmframe.h	 |  3 ++-
- src/wmoption.cc |  1 +
- 3 files changed, 17 insertions(+), 4 deletions(-)
