--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+icewm (1.3.8+githubmod+20150914+fa3fdef-2) unstable; urgency=medium
+
+  * Restored /usr/share/icewm/preferences - some icewm settings don't get
+    their defaults if the file is not present anywhere
+
+ -- Eduard Bloch <blade@debian.org>  Tue, 15 Sep 2015 00:46:46 +0200
+
 icewm (1.3.8+githubmod+20150914+fa3fdef-1) unstable; urgency=low
 
   * New upstream snapshot
