--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-icewm (1.3.8+githubmod+20150914+fa3fdef-2~bpo8+1) unstable; urgency=low
+icewm (1.3.8+githubmod+20150914+fa3fdef-2~bpo8+1) jessie-backports; urgency=low
 
   * Jessie backport update
 
