--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+icewm (1.3.8+mod+20151227-1) unstable; urgency=low
+
+  * New upstream snapshot (1.3.12+)
+
+ -- Eduard Bloch <blade@debian.org>  Sun, 27 Dec 2015 21:39:32 +0100
+
 icewm (1.3.8+githubmod+20150914+fa3fdef-2) unstable; urgency=medium
 
   * Restored /usr/share/icewm/preferences - some icewm settings don't get
