--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+icewm (1.3.8+mod+20160825-1) unstable; urgency=low
+
+  * New upstream snapshot (1.3.12+)
+  * Adapt menu and toolbar references from Iceweasel to Firefox when needed
+  * Changed XChat to HexChat since XChat was removed from Testing
+  * Added some forgotten checksums for deprecated conffiles from 
+    revision 1.3.8+githubmod+20150412+960629d-1
+
+ -- Eduard Bloch <blade@debian.org>  Thu, 25 Aug 2016 20:33:15 +0200
+
 icewm (1.3.8+mod+20151227-1) unstable; urgency=low
 
   * New upstream snapshot (1.3.12+)
