--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ icewm (1.3.8+mod+20160825-1) unstable; urgency=low
   * Added some forgotten checksums for deprecated conffiles from 
     revision 1.3.8+githubmod+20150412+960629d-1
   * New menu category: Accessibility (closes: #825032)
+  * Remove conffile /etc/X11/icewm/programs when purging (closes: #806401)
 
  -- Eduard Bloch <blade@debian.org>  Thu, 25 Aug 2016 20:33:15 +0200
 
